--- a/html/backCustom.html
+++ b/html/backCustom.html
@@ -15,7 +15,7 @@
                     <li>{{member.warning}}</li>
                     <li>{{member.state}}</li>
                     <li>{{member.enrollDate}}</li>        
-                    <li>編輯與查看</li>
+                    <li><button v-on:click="openLightBox(key)" class="round">編輯與查看</button></li>
                 </ul>
                 <div class="pageIndex">
                     <ul>
