--- a/html/backLogin.html
+++ b/html/backLogin.html
@@ -66,26 +66,14 @@
         new Vue({
             el: '#loginArea',
             data: {     //變數放在這!
-            //     changeBtn:false,
-            //     registerChange:false,
-                // addMemId:'',
-                // addMemPsw:'', 
-                // addMemPswAgain:'',
-                // emailText:'',
-                // telText:'',
-                // nameText:'',
-                // addressText:'',
-                // memNickText:'',
                 loginMemPsw:'',
                 loginMemId:'',
             },
             methods: {  //函數大部份放在這!
                 loginSelect(){
-                    let loginBtn = document.querySelector('.login a:first-of-type');
-                    if(loginBtn.innerText == '登入'){
                         axios({
                             method: 'post',
-                            // url: 'php/login.php',
+                            url: 'php/backLogin.php',
                             //API要求的資料
                             data: {
                                 loginMemPsw:this.loginMemPsw,
@@ -94,21 +82,14 @@
                         })
                         .then((response) => {
                             if(response.data == 1){
-                                loginBtn.innerText = "登出";
-                                location = "homePage.html";
+                                location = "backProduct.html";
                             }else{
-                                alert("帳號密碼錯誤")
+                                alert('帳號密碼錯誤')
                             }
+                            
+                            
                         })
                         .catch((error) => console.log(error))
-                    }else{
-                        axios({
-                            method: 'post',
-                            // url: 'php/logout.php',
-                        })
-                        .then((response) => {location.reload();})
-                        .catch((error) => console.log(error))
-                    }
                 }
             },
             computed: {  //函數也可以放在這!但是放在這裡的函數，不能傳參數，一定要有回傳值
