--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -35,7 +35,7 @@
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script>
-        window.addEventListener('load', function() {
+        window.addEventListener('DOMContentLoaded', function() {
             loginCheck(true);
         })
     </script>
