--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -15,7 +15,7 @@
     <script src="js/articleAll.js"></script>
     <script src="js/loginCheck.js"></script>
     <script>
-        window.addEventListener('load', function() {
+        window.addEventListener('DOMContentLoaded', function() {
             loginCheck(false);
         })
     </script>
