--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -13,7 +13,7 @@
       <!-- 登入  -->
       <script src="js/loginCheck.js"></script>
       <script >
-          window.addEventListener('load',function(){
+          window.addEventListener('DOMContentLoaded',function(){
               loginCheck(false);
           })
       </script>
