--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
     <script src="js/loginCheck.js"></script>
     <script >
-        window.addEventListener('load',function(){
+        window.addEventListener('DOMContentLoaded',function(){
             loginCheck(false);
         })
     </script>
