--- a/html/produtFromPhp.html
+++ b/html/produtFromPhp.html
@@ -15,7 +15,7 @@
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script>
-        window.addEventListener('load', function() {
+        window.addEventListener('DOMContentLoaded', function() {
             loginCheck(false);
         })
     </script>
