--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -15,7 +15,7 @@
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script >
-        window.addEventListener('DOMContentLoaded',function(){
+        window.addEventListener('load',function(){
             loginCheck(false);
         })
     </script>
