--- a/html/backArticle.html
+++ b/html/backArticle.html
@@ -63,9 +63,11 @@
                 </section>
                 <div  class="pageIndex">
                     <ul>
-                        <li :class="{disabled: currentPage === 1}" @click="setPage(currentPage-1)"><a href="">< </a></li>
-                        <li v-for="n in totalPage" @click="setPage(n)"><a href="#">{{n}}</a></li>
-                        <li :class="{disabled: currentPage === totalPage}" @click="setPage(currentPage+1)"><a href="">></a></li>
+                        <li :class="{displayNone: currentPage === 1}" @click="setPage(currentPage-1)">&laquo;</li>
+
+                        <li v-for="n in totalPage" @click="setPage(n)">{{n}}</li>
+
+                        <li :class="{displayNone: currentPage === totalPage}"  @click="setPage(currentPage+1)">&raquo;</li>
                     </ul>
                 </div>
 
@@ -150,6 +152,7 @@
                 },
                 setPage(thePage){
                     this.currentPage = thePage;
+                    $("html, body").animate({ scrollTop: 0 }, "slow");
                 },
                 confirmChange(){
                     let thisVue = this;
