--- a/html/gallery02.html
+++ b/html/gallery02.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galleryAll/gallery/galllery02.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- OwlCarousel -->
+    <link rel="stylesheet" href="assets/owlCss/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
+    <link rel="stylesheet" href="galleryAll/gallery/index.css" />
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script >
@@ -24,7 +28,7 @@
     <script type="module" src="galleryAll/gallery/gallery02.js"></script>
     <script src="galleryAll/js/OBJLoader.js"></script>
     <script src="galleryAll/js/threex.domevents.js"></script>
-
+    <script src="js/jquery/jquery.min.js"></script>
     <section class="lightBox displayNone" id="lightBoxP3">
         <i class="closeLightBox fas fa-times" id="closeLightBoxP3">x</i>
         <!-- 圖片ease-in-out-->
@@ -167,14 +171,24 @@
             <a href="productSingle.html" class="goPrice round">前往出價</a>
         </div>
     </section>
+    <!-- 提示 -->
+    <div class="galleryHint" id="galleryHint">
+        <i class="closeHint fas fa-times" id="closeHint"></i>
+        <div class="owl-carousel owl-theme">
+        </div>
+    </div>
 </body>
 </html>
+<!-- 燈箱.js -->
+<!-- OwlCarousel -->
+<!-- <script src="js/owl/owl.carousel.js"></script> -->
+<script src="js/owl/owl.carousel.min.js"></script>
+<script src="js/gallery.js" ></script>
 <!-- 圖片ease-in-out-->
 <link rel="stylesheet" href="galleryAll/gallery/easeGallery02.css">
 
 <!-- 方塊旋轉 -->
 <link rel="stylesheet" href="galleryAll/gallery/cubeGallery02.css">
-<script src="galleryAll/js/jquery.min.js"></script>
 <!--方塊收起-->
 <script>
     $(function () {
