--- a/html/gallery.html
+++ b/html/gallery.html
@@ -156,10 +156,10 @@
                     <div class="cube">
                         <div class="top"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
                         <div>
-                            <span style="--i:0"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:1"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:2"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:3"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="closePic" style="--i:0"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="closePic" style="--i:1"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="closePic" style="--i:2"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="closePic" style="--i:3"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
                         </div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@ const app = new Vue({
 <script>
     $(function () {
         $(`#cubeBtn`).click(function(){
-            $('span').slideToggle();
+            $('.closePic').slideToggle();
         });
     });
 </script>
